feat: added screenshot upload feature,etc

--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-ViewData["Title"] = "About Us";
+	ViewData["Title"] = "About Us";
 }
 
 <div class="container-fluid card p-5">
@@ -9,8 +9,8 @@ ViewData["Title"] = "About Us";
 		</div>
 		<div class="col-md-1 d-flex justify-content-end">
 			<div>
-				<button id="back-btn"
-					class="btn btn-sm  btn-primary"> <span class="material-icons">arrow_back</span></button>
+				<button id="back-btn" class=" btn shadow-none btn-sm btn-primary"> <span
+						class="material-icons">arrow_back</span></button>
 				<script>
 					$("#back-btn").click(function () {
 						window.history.back();
@@ -21,15 +21,18 @@ ViewData["Title"] = "About Us";
 	</div>
 	<div class="about-container">
 		<p>
-			The Ticketing Management System is a web-based application designed to help organizations manage their ticketing
+			The Ticketing Management System is a web-based application designed to help organizations manage their
+			ticketing
 			processes efficiently.
-			It provides features for creating, tracking, and resolving tickets, allowing users to prioritize and assign tasks
+			It provides features for creating, tracking, and resolving tickets, allowing users to prioritize and assign
+			tasks
 			effectively.
 		</p>
 		<p>
 			With the Ticketing Management System, teams can collaborate seamlessly, streamline communication, and ensure
 			prompt resolution of issues
-			and requests. Whether it's IT support, customer service, or project management, our system offers a centralized
+			and requests. Whether it's IT support, customer service, or project management, our system offers a
+			centralized
 			platform to manage all
 			types of tickets efficiently.
 		</p>
@@ -37,8 +40,6 @@ ViewData["Title"] = "About Us";
 
 	<div>
 		<p>To access the source code of this project, visit our GitHub repository:</p>
-		<a href="https://github.com/marcuwynu23/TicketSquad"
-			target="_blank"
-			class="">GitHub Repository</a>
+		<a href="https://github.com/marcuwynu23/TicketSquad" target="_blank" class="">GitHub Repository</a>
 	</div>
 </div>
