--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,78 +3,45 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TicketSquad</title>
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet"
-        href="~/lib/md5/css/mdb.min.css" />
-    <link rel="stylesheet"
-        href="~/css/site.css"
-        asp-append-version="true" />
-    <link rel="stylesheet"
-        href="~/TicketSquad.styles.css"
-        asp-append-version="true" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/md5/css/mdb.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/TicketSquad.styles.css" asp-append-version="true" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light box-shadow mb-3 mx-5">
             <div class="container-fluid">
-                <a class="navbar-brand fw-bold"
-                    asp-area=""
-                    asp-controller="Ticket"
-                    asp-action="Index">
+                <a class="navbar-brand fw-bold" asp-area="" asp-controller="Ticket" asp-action="Index">
                     <img src="https://clipartcraft.com/images/ticket-clipart-clear-background-1.png"
-                        alt="Task Manager Icon"
-                        width="30"
-                        height="30"
-                        class="d-inline-block align-top me-2">
+                        alt="Task Manager Icon" width="30" height="30" class="d-inline-block align-top me-2">
                     TicketSquad</a>
-                <button class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link fw-bold"
-                                asp-area=""
-                                asp-controller="Ticket"
-                                asp-action="Index">
+                            <a class="nav-link fw-bold" asp-area="" asp-controller="Ticket" asp-action="Index">
                                 <div>
-                                    <span class="material-icons">
-                                        confirmation_number
-                                    </span>
-                                    <span class="align-top">Ticket List</span>
+                                    <span class="align-top h6">Ticket List</span>
                                 </div>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-bold"
-                                asp-area=""
-                                asp-controller="Account"
-                                asp-action="Index">
-                                <span class="material-icons me-1">person</span>
-                                <span class="align-top">Account</span></a>
+                            <a class="nav-link fw-bold" asp-area="" asp-controller="Account" asp-action="Index">
+                                <span class="align-top h6">Account</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fw-bold"
-                                asp-area=""
-                                asp-controller="About"
-                                asp-action="Index">
-                                <span class="material-icons me-1">info</span>
-                                <span class="align-top">About</span>
+                            <a class="nav-link fw-bold" asp-area="" asp-controller="About" asp-action="Index">
+                                <span class="align-top h6">About</span>
                             </a>
                         </li>
                     </ul>
@@ -83,8 +50,7 @@
         </nav>
     </header>
     <div class="container-fluid p-3">
-        <main role="main"
-            class="pb-3">
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
@@ -97,8 +63,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/md5/js/mdb.umd.min.js"></script>
     <script src="~/lib/md5/js/mdb.es.min.js"></script>
-    <script src="~/js/site.js"
-        asp-append-version="true"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
