--- a/Views/Ticket/Index.cshtml
+++ b/Views/Ticket/Index.cshtml
@@ -4,11 +4,11 @@
 <div class="container-fluid card p-5">
     <div class="row">
         <div class="col-md-11">
-            <div class="fs-5 fw-bold">Ticket List</div>
+            <div class="fs-1 fw-bold">Ticket List</div>
         </div>
         <div class="col-md-1 d-flex justify-content-end">
             <div>
-                <button id="back-btn" class="btn btn-sm  btn-primary"> <span
+                <button id="back-btn" class="btn btn-sm  shadow-none  btn-primary"> <span
                         class="material-icons">arrow_back</span></button>
                 <script>
                     $("#back-btn").click(function () {
@@ -26,12 +26,12 @@
                 <table class="table  table-fixed">
                     <thead>
                         <tr>
-                            <th class="fs-5 fw-bold">Account Name</th>
-                            <th class="fs-5 fw-bold">Issue Date</th>
-                            <th class="fs-5 fw-bold">Status</th>
-                            <th class="fs-5 fw-bold">Priority</th>
-                            <th class="fs-5 fw-bold">Title</th>
-                            <th class="fs-5 text-end fw-bold w-25">Actions</th>
+                            <th class="h6 ">Account Name</th>
+                            <th class="h6 ">Issue Date</th>
+                            <th class="h6 ">Status</th>
+                            <th class="h6 ">Priority</th>
+                            <th class="h6 ">Title</th>
+                            <th class="h6 text-end  w-25">Actions</th>
                         </tr>
                     </thead>
                     <tbody class="table-group-divider table-divider-color">
@@ -63,29 +63,29 @@
                                     <td>
                                         @if (ticket.Status == TicketStatus.Open)
                                         {
-                                            <p class="fw-bold text-primary">@ticket.Status</p>
+                                            <p class=" text-primary">@ticket.Status</p>
                                         }
                                         else if (ticket.Status == TicketStatus.InProgress)
                                         {
-                                            <p class="fw-bold text-warning">@ticket.Status</p>
+                                            <p class=" text-warning">@ticket.Status</p>
                                         }
                                         else
                                         {
-                                            <p class="fw-bold text-secondary">@ticket.Status</p>
+                                            <p class=" text-secondary">@ticket.Status</p>
                                         }
                                     </td>
                                     <td>
                                         @if (ticket.Priority == TicketPriority.Low)
                                         {
-                                            <p class="fw-bold text-primary">@ticket.Priority</p>
+                                            <p class=" text-primary">@ticket.Priority</p>
                                         }
                                         else if (ticket.Priority == TicketPriority.Medium)
                                         {
-                                            <p class="fw-bold text-warning">@ticket.Priority</p>
+                                            <p class=" text-warning">@ticket.Priority</p>
                                         }
                                         else
                                         {
-                                            <p class="fw-bold text-danger">@ticket.Priority</p>
+                                            <p class=" text-danger">@ticket.Priority</p>
                                         }
 
                                     </td>
@@ -97,11 +97,11 @@
 
                                     <td class="text-end">
                                         <a asp-area="" asp-controller="Ticket" asp-action="Show" asp-route-id="@ticket.Id"
-                                            class="btn btn-sm btn-primary text-capitalize">
+                                            class="btn btn-sm  shadow-none btn-primary text-capitalize">
                                             <i class="fas fa-eye me-1"></i>View
                                         </a>
                                         <a asp-area="" asp-controller="Ticket" asp-action="Edit" asp-route-id="@ticket.Id"
-                                            class="btn btn-sm btn-warning text-capitalize">
+                                            class="btn btn-sm  shadow-none btn-warning text-capitalize">
                                             <i class="fas fa-edit me-1"></i>Edit
                                         </a>
 
@@ -117,18 +117,19 @@
     else
     {
         <div class="container-fluid">
-            <a asp-area="" asp-controller="Ticket" asp-action="Create" class="my-3 btn btn-sm btn-outline-primary">Create
+            <a asp-area="" asp-controller="Ticket" asp-action="Create"
+                class="my-3 btn  shadow-none btn-sm btn-outline-primary">Create
                 New
                 Task</a>
             <div class="ticketlist-container mt-2" style="overflow-x: auto; max-height: 500px;">
                 <table class="table  table-fixed">
                     <thead>
                         <tr>
-                            <th class="fs-5 fw-bold">Issue Date</th>
-                            <th class="fs-5 fw-bold">Status</th>
-                            <th class="fs-5 fw-bold">Priority</th>
-                            <th class="fs-5 fw-bold">Title</th>
-                            <th class="fs-5 text-end fw-bold w-25">Actions</th>
+                            <th class="h6 ">Issue Date</th>
+                            <th class="h6 ">Status</th>
+                            <th class="h6 ">Priority</th>
+                            <th class="h6 ">Title</th>
+                            <th class="h6 text-end  w-25">Actions</th>
                         </tr>
                     </thead>
                     <tbody class="table-group-divider table-divider-color">
@@ -155,29 +156,29 @@
                                     <td>
                                         @if (ticket.Status == TicketStatus.Open)
                                         {
-                                            <p class="fw-bold text-primary">@ticket.Status</p>
+                                            <p class=" text-primary">@ticket.Status</p>
                                         }
                                         else if (ticket.Status == TicketStatus.InProgress)
                                         {
-                                            <p class="fw-bold text-warning">@ticket.Status</p>
+                                            <p class=" text-warning">@ticket.Status</p>
                                         }
                                         else
                                         {
-                                            <p class="fw-bold text-secondary">@ticket.Status</p>
+                                            <p class=" text-secondary">@ticket.Status</p>
                                         }
                                     </td>
                                     <td>
                                         @if (ticket.Priority == TicketPriority.Low)
                                         {
-                                            <p class="fw-bold text-primary">@ticket.Priority</p>
+                                            <p class=" text-primary">@ticket.Priority</p>
                                         }
                                         else if (ticket.Priority == TicketPriority.Medium)
                                         {
-                                            <p class="fw-bold text-warning">@ticket.Priority</p>
+                                            <p class=" text-warning">@ticket.Priority</p>
                                         }
                                         else
                                         {
-                                            <p class="fw-bold text-danger">@ticket.Priority</p>
+                                            <p class=" text-danger">@ticket.Priority</p>
                                         }
 
                                     </td>
@@ -189,15 +190,15 @@
 
                                     <td class="text-end">
                                         <a asp-area="" asp-controller="Ticket" asp-action="Show" asp-route-id="@ticket.Id"
-                                            class="btn btn-sm btn-primary text-capitalize">
+                                            class="btn btn-sm  shadow-none btn-primary text-capitalize">
                                             <i class="fas fa-eye me-1"></i>View
                                         </a>
                                         <a asp-area="" asp-controller="Ticket" asp-action="Edit" asp-route-id="@ticket.Id"
-                                            class="btn btn-sm btn-warning text-capitalize">
+                                            class="btn btn-sm  shadow-none btn-warning text-capitalize">
                                             <i class="fas fa-edit me-1"></i>Edit
                                         </a>
                                         <a asp-area="" asp-controller="Ticket" asp-action="Delete" asp-route-id="@ticket.Id"
-                                            class="btn btn-sm btn-danger text-capitalize">
+                                            class="btn btn-sm  shadow-none btn-danger text-capitalize">
                                             <i class="fas fa-trash-alt me-1"></i>Delete
                                         </a>
                                     </td>
