--- a/Views/Ticket/Show.cshtml
+++ b/Views/Ticket/Show.cshtml
@@ -1,5 +1,5 @@
 @{
-ViewData["Title"] = "View Ticket";
+	ViewData["Title"] = "View Ticket";
 }
 
 <div class="container-fluid card p-5">
@@ -9,8 +9,9 @@ ViewData["Title"] = "View Ticket";
 		</div>
 		<div class="col-md-1 d-flex justify-content-end">
 			<div>
-				<button id="back-btn"
-					class="btn btn-sm  btn-primary"> <span class="material-icons">arrow_back</span></button>
+				<button id="back-btn" class="btn btn-sm shadow-none btn-primary">
+					<span class="material-icons">arrow_back</span>
+				</button>
 				<script>
 					$("#back-btn").click(function () {
 						window.history.back();
@@ -23,47 +24,39 @@ ViewData["Title"] = "View Ticket";
 		<form>
 			<div class="form-group mb-4">
 				<label for="Title">Title</label>
-				<input type="text"
-					id="Title"
-					class="form-control"
-					value="@ViewBag.Ticket.Title"
-					readonly />
+				<input type="text" id="Title" class="form-control" value="@ViewBag.Ticket.Title" readonly />
 			</div>
 
 			<div class="form-group mb-4">
 				<label for="Description">Description</label>
-				<textarea class="form-control"
-					id="Description"
-					readonly>@ViewBag.Ticket.Description</textarea>
+				<textarea class="form-control" id="Description" readonly>@ViewBag.Ticket.Description</textarea>
 			</div>
 
 			<div class="form-group mb-4">
 				<label for="Status">Status</label>
-				<input type="text"
-					id="Status"
-					class="form-control"
-					value="@ViewBag.Ticket.Status"
-					readonly />
+				<input type="text" id="Status" class="form-control" value="@ViewBag.Ticket.Status" readonly />
 			</div>
 
 			<div class="form-group mb-4">
 				<label for="Priority">Priority</label>
-				<input type="text"
-					id="Priority"
-					class="form-control"
-					value="@ViewBag.Ticket.Priority"
-					readonly />
+				<input type="text" id="Priority" class="form-control" value="@ViewBag.Ticket.Priority" readonly />
 			</div>
 
 			<div class="form-group mb-4">
 				<label for="CreatedAt">Created At</label>
-				<input type="text"
-					id="CreatedAt"
-					class="form-control"
-					value="@ViewBag.Ticket.CreatedAt"
-					readonly />
+				<input type="text" id="CreatedAt" class="form-control" value="@ViewBag.Ticket.CreatedAt" readonly />
 			</div>
+
+			@if (!string.IsNullOrEmpty(ViewBag.Ticket.ScreenshotPath))
+			{
+				<div class="form-group mb-4">
+					<label for="Screenshot">Screenshot</label>
+					<div class="mb-2">
+						<img src="@ViewBag.Ticket.ScreenshotPath" alt="Screenshot" style="max-width: 200px;" />
+					</div>
+				</div>
+			}
+
 		</form>
 	</div>
-
 </div>
