--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div class="d-flex justify-content-center align-items-center vh-100">
+<div class="d-flex justify-content-center align-items-center vh-100 ">
 	<div class="container w-50 card p-5">
 		<p class="fs-2 text-center fw-bold text-primary">Login</p>
 		<form method="POST">
@@ -46,7 +46,7 @@
 			</div>
 
 			<!-- Submit button -->
-			<button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block">Sign in</button>
+			<button data-mdb-ripple-init type="submit" class="btn btn-primary shadow-none btn-block">Sign in</button>
 		</form>
 	</div>
 </div>
