--- a/Views/Ticket/Create.cshtml
+++ b/Views/Ticket/Create.cshtml
@@ -1,5 +1,5 @@
 @{
-ViewData["Title"] = "Create a Ticket";
+	ViewData["Title"] = "Create a Ticket";
 }
 
 <div class="container-fluid card p-5">
@@ -9,8 +9,8 @@ ViewData["Title"] = "Create a Ticket";
 		</div>
 		<div class="col-md-1 d-flex justify-content-end">
 			<div>
-				<button id="back-btn"
-					class="btn btn-sm  btn-primary"> <span class="material-icons">arrow_back</span></button>
+				<button id="back-btn" class="btn btn-sm btn-primary"> <span
+						class="material-icons">arrow_back</span></button>
 				<script>
 					$("#back-btn").click(function () {
 						window.history.back();
@@ -20,67 +20,46 @@ ViewData["Title"] = "Create a Ticket";
 		</div>
 	</div>
 	<div class="container-fluid create-task-container">
-		<form method="POST">
-			<div data-mdb-input-init
-				class="form-outline mb-4">
-				<input type="text"
-					id="Title"
-					class="form-control"
-					name="Title" />
-				<label class="form-label"
-					for="Title">Title</label>
+		<form method="POST" enctype="multipart/form-data">
+			<div data-mdb-input-init class="form-outline mb-4">
+				<input type="text" id="Title" class="form-control" name="Title" />
+				<label class="form-label" for="Title">Title</label>
 			</div>
 
-			<div data-mdb-input-init
-				class="form-outline mb-4">
-				<textarea class="form-control"
-					id="Description"
-					name="Description"
-					rows="4"></textarea>
-				<label class="form-label"
-					for="Description">Description</label>
+			<div data-mdb-input-init class="form-outline mb-4">
+				<textarea class="form-control" id="Description" name="Description" rows="4"></textarea>
+				<label class="form-label" for="Description">Description</label>
 			</div>
 
-			<div data-mdb-input-init
-				class="form-outline mb-4">
-				<select class="form-select"
-					id="Status"
-					name="Status">
+			<div data-mdb-input-init class="form-outline mb-4">
+				<select class="form-select" id="Status" name="Status">
 					<option value="0">Open</option>
 					<option value="1">In Progress</option>
 					<option value="2">Closed</option>
 				</select>
-				<label class="form-label"
-					for="Status">Status</label>
+				<label class="form-label" for="Status">Status</label>
 			</div>
 
-			<div data-mdb-input-init
-				class="form-outline mb-4">
-				<select class="form-select"
-					id="Priority"
-					name="Priority">
+			<div data-mdb-input-init class="form-outline mb-4">
+				<select class="form-select" id="Priority" name="Priority">
 					<option value="0">Low</option>
 					<option value="1">Medium</option>
 					<option value="2">High</option>
 				</select>
-				<label class="form-label"
-					for="Priority">Priority</label>
+				<label class="form-label" for="Priority">Priority</label>
 			</div>
 
-			<div data-mdb-input-init
-				class="form-outline mb-4">
-				<input type="datetime-local"
-					id="CreatedAt"
-					class="form-control"
-					name="CreatedAt" />
-				<label class="form-label"
-					for="CreatedAt">Issue Date</label>
+			<div data-mdb-input-init class="form-outline mb-4">
+				<input type="datetime-local" id="CreatedAt" class="form-control" name="CreatedAt" />
+				<label class="form-label" for="CreatedAt">Issue Date</label>
 			</div>
 
-			<button data-mdb-ripple-init
-				type="submit"
-				class="btn btn-primary btn-block mb-4">Submit</button>
+			<div data-mdb-input-init class="form-outline mb-4">
+				<input type="file" id="Screenshot" class="form-control" name="Screenshot" accept="image/*" />
+				<label class="form-label" for="Screenshot">Upload Screenshot</label>
+			</div>
+
+			<button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block mb-4">Submit</button>
 		</form>
 	</div>
-
 </div>
